Fix bug on firefox, the user couldn't correctly grab the hidden input when the input was on the edges (100% - 0%)

--- a/src/equalizer.scss
+++ b/src/equalizer.scss
@@ -109,7 +109,12 @@ $border-radius: 10px;
       // hiding original style
       opacity: 0;
       width: $slider-thumb-size*4;;
-      height: 100%;
+
+      // I'm setting it to be slightly bigger than the parent
+      // So if the user (especially on firefox) is click slightly out of it
+      // can still perform the action on the input slider correctly
+      top: -2%;
+      height: 104%;
 
       // reminder: input z-index is 10, fake-track is 0 and fake-thumb is 5
       z-index: 10;
